# EMCSS-Assignments

./: README.md
MyCudaDNN/: CMakeLists.txt  train.cu
MyCudaDNN/src/: layer.cu  layer.cuh  loss.cu  loss.cuh  mnist.cu  mnist.cuh  network.cu  network.cuh  tensor.cuh  utils.cuh
Template-Matching-CUDA/: CMakeLists.txt  main.cu
Template-Matching-Pthreads/: CMakeLists.txt  main.cpp
Template-Matching-Test-Dataset/0/: S0_3_3.txt  T0_5_5.txt
Template-Matching-Test-Dataset/2/: S2_5_5.txt
Template-Matching-Test-Dataset/4/: S4_5_5.txt  T4_50_50.txt
Template-Matching-Test-Dataset/5/: S5_6_6.txt  T5_2500_750.txt
